--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-family: "Poppins", sans-serif;
+}
+
+img,
+svg {
+	max-width: 100%;
+	display: block;
+}
+
+.container {
+	width: 40vw;
+	border: 1px solid #000;
+	border-radius: 10px;
+	padding: 20px;
+}
+
+.container h1 {
+	font-size: 24px;
+	font-weight: 400;
+	margin-bottom: 30px;
+}
+
+.birthday-list {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin-bottom: 30px;
+}
+
+.birthday-item {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+.avatar {
+	width: 65px;
+	height: 65px;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
+.container h2 {
+	font-size: 20px;
+}
+
+.container h3 {
+	font-size: 16px;
+	font-weight: 400;
+}
+
+.clear-btn {
+	cursor: pointer;
+	width: 100%;
+	border: none;
+	font-family: inherit;
+	font-size: 16px;
+	padding: 10px;
 }
